<resources>
    <string name="app_name">Smart Cistern</string>
    <string name="action_settings">Ajustes</string>
    <string-array name="sections_titles">
        <item>Conexión</item>
        <item>Monitoreo</item>
        <item>Detalles</item>
        <item>Modo Manual</item>
    </string-array>
    <string name="ip_port_error">Error en la conexión (Error de IP o puerto)</string>
    <string name="input_error">Error en la conexión (No se pueden leer los datos)</string>
    <string name="network_unreachable_exception">Network is unreachable</string>
    <string name="internet_disconnected">Error en la conexión (Internet desconectado)</string>
    <string name="no_route_to_host">Error en la conexión (Dirección o puerto erróneo)</string>
    <string name="no_route_to_host_exception">No route to host</string>
    <string name="conection_lost">Conexión perdida</string>
    <string name="title_activity_settings">Ajustes</string>
    <string name="pref_header_connection">Conexión</string>
    <string name="pref_title_ip_cistern">Dirección IP de la cisterna</string>
    <string name="pref_default_ip_cistern">192.168.3.100</string>
    <string name="pref_default_port_cistern">10001</string>
    <string name="pref_title_port_cistern">Puerto de acceso de cisterna</string>
    <string name="pref_summary_ip_cistern">Establezca la dirección IP del Wi-Fi de la cisterna a conectar</string>
    <string name="pref_summary_port_cistern">Establezca el puerto de acceso del servidor de la cisterna</string>

    <string name="pref_title_ip_pump">Dirección IP de la bomba de agua</string>
    <string name="pref_default_ip_pump">192.168.3.101</string>
    <string name="pref_default_port_pump">10002</string>
    <string name="pref_title_port_pump">Puerto de acceso de bomba</string>
    <string name="pref_summary_ip_pump">Establezca la dirección IP del Wi-Fi de la bomba de agua a conectar</string>
    <string name="pref_summary_port_pump">Establezca el puerto de acceso del servidor de la bomba</string>

    <string name="connection_refused_exception">ECONNREFUSED</string>
    <string name="cylinder_type">Cilindro</string>
    <string name="cuboid_type">Cuboide</string>
    <string name="cube_type">Cubo</string>
    <string name="figure_type_pref_title">Tipo de contenedor</string>
    <string name="figure_type_pref_summary">Seleccione el tipo de contenedor</string>
    <string name="radio_pref_title">Radio del contenedor</string>
    <string name="radio_pref_summary">Establezca el radio del contenedor, sólo si su contenedor es un cilindro.</string>
    <string name="static_height_pref_title">Altura del contenedor</string>
    <string name="static_height_pref_summary">Establezca la altura que tiene el contenedor en centímetros.</string>
    <string name="full_height_pref_title">Distancia del contenedor lleno</string>
    <string name="full_height_pref_summary">Establezca la distancia del contenedor obtenida desde el sensor cuando este está lleno de líquido.</string>
    <string name="empty_height_pref_title">Distancia del contenedor vacío</string>
    <string name="empty_height_pref_summary">Establezca la distancia del contenedor obtenida desde el sensor cuando éste no tiene líquido.</string>
    <string name="pref_header_container">Contenedor</string>
    <string name="connecting_to_cistern">Conectando a cisterna...</string>
    <string name="connection_to_server_success">Conexión exitosa</string>
    <string name="connection_to_server_failed">Lo sentimos, no se pudo conectar</string>
    <string name="connect">Conectar</string>
    <string name="disconnect">Desconectar</string>
    <string name="edge_pref_key">edge_pref</string>
    <string name="edge_pref_title">Arista del contenedor</string>
    <string name="edge_pref_summary">Establezca el largo del arista del contenedor.</string>
    <string name="edge_pref_default">5</string>
    <string name="width_pref_default">5</string>
    <string name="width_pref_key">width_pref_key</string>
    <string name="width_pref_title">Ancho del contenedor</string>
    <string name="width_pref_summary">Establezca el ancho del contenedor.</string>
    <string name="length_pref_default">5</string>
    <string name="length_pref_key">length_pref_key</string>
    <string name="length_pref_title">Largo del contenedor</string>
    <string name="length_pref_summary">Establezca el largo del contenedor</string>
    <string name="radio_pref_key">radio_pref</string>
    <string name="figure_type_pref_key">figure_type_key</string>
    <string name="error_margin_pref_key">error_margin_pref_key</string>
    <string name="error_margin_pref_summary">Establezca que tanta separación del sensor se necesitan para poder medir</string>
    <string name="error_margin_pref_title">Margen de error del sensor</string>
    <string name="welcome_content">Con esta aplicación podras monitorear el contenedor de líquido que desees, introduce la dirección IP y el puerto de la cisterna., asegúrate que estas conectado a la red, a continuación deberás vaciar tu contenedor y a luego llenarlo, esto con el próposito de calibrarlo.</string>
    <string name="welcome_title">BIENVENIDO</string>
    <string name="obtaining_height">Obteniendo altura...</string>
    <string name="height_established_success">Se ha establecido correctamente la altura (</string>
    <string name="cm_height">cm)</string>
    <string name="distance_empty_setup_subtitle">Ahora procederemos a monitorear el contenedor vacío, aségurate que se encuentre completamente vacío.</string>
    <string name="is_already_empty">Ya está vacío</string>
    <string name="distance_setup_title">Configuración de altura</string>
    <string name="distance_full_setup_subtitle">Ya se estableció la distancia en vacío, procederemos a monitorear el contenedor lleno, aségurate que se encuentre completamente lleno.</string>
    <string name="is_already_full">Ya está lleno</string>
    <string name="setup_finished">Ya casi terminamos</string>
    <string name="finished_setup_subtitle">Ahora que ya hemos configurado el sensor, lo que sigue es establecer las medidas del contenedor, lo anterior depende del tipo de contenedor.</string>
    <string name="continue_button">Continuar</string>
    <string name="finish">Terminar</string>
    <string name="connection_details">Detalles del WiFi de la cisterna</string>
    <string name="signal_strength">Intensidad de señal: $</string>
    <string name="distance_calculated">Distancia calculada: $</string>
    <string name="channel_setted">Canal establecido: $</string>
    <string name="signal_quality">Calidad de la señal: $</string>
    <string name="very_good_strength">Muy buena</string>
    <string name="good_strength">Buena</string>
    <string name="regular_strength">Regular</string>
    <string name="bad_strength">Mala</string>
    <string name="very_bad_strength">Muy mala</string>
    <string name="read_distance">Distancia leída</string>
    <string name="calculated_volume">Volumen calculado</string>
    <string name="cm">cm</string>
    <string name="ml">ml</string>
    <string name="cistern_ip_key">ip_address_key</string>
    <string name="cistern_port_key">port_key</string>
    <string name="pump_ip_key">pump_ip_address_key</string>
    <string name="pump_port_key">pump_port_key</string>
    <string name="manual_mode_key">manual_mode_key</string>
    <string name="manual_mode_default">0</string>
    <string name="pref_header_manual_mode">Modo manual</string>
    <string name="manual_mode_title">Habilitar modo manual</string>
    <string name="manual_mode_summary">Indique si desea activar el modo manual para controlar la bomba de la cisterna</string>
    <string name="over_limits_key">over_limits_key</string>
    <string name="over_limits_summary">Establezca si desea llenar la bomba por arriba de los límites establecidos (pueden ocurrir derrames de agua)</string>
    <string name="over_limits_title">Sobrellenado de cisterna</string>
    <string name="restart">Reinicio</string>
    <string name="restart_dialog_message">¿Esta seguro de cambiar el modo?, se reiniciará la aplicación</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="container_empty">Su contenedor se ha quedado vacío, se ha encendido la bomba de agua.</string>
    <string name="container_full">Su contenedor se encuentra lleno, se ha apagado la bomba de agua.</string>
    <string name="pref_notification_title">Activar notificaciones</string>
    <string name="pref_notification_summary">Indique si desea activar las notificaciones para avisarle cuando se ha quedado solo el contenedor o cuando se ha llenado</string>
    <string name="pref_notification_key">pref_notification_key</string>
    <string name="pref_header_notification">Notificaciones</string>
    <string name="skip_button">Saltar</string>
    <string name="show_screens_title">Mostrar pantallas sin conexión</string>
    <string name="show_screens_summary">Indique si desea observar las pantallas de monitoreo, datos y modo manual aunque este sin conexión</string>
    <string name="show_screens_key">show_screens_key</string>
    <string name="volume">Volumen</string>
    <string name="volume_total">Volumen total:</string>
    <string name="volume_average">Promedio:</string>
    <string name="speed">Velocidad</string>
    <string name="dump_speed">Rapidez de vaciado:</string>
    <string name="filling_speed">Rapidez de llenado:</string>
    <string name="dump_and_filling_speed">Vaciado y llenado</string>
    <string name="dump_times">Veces vaciado:</string>
    <string name="filling_times">Veces llenado:</string>
    <string name="times"> veces</string>
    <string name="estimated_time">Tiempo estimado</string>
    <string name="dump_time">Tiempo en vaciarse:</string>
    <string name="filling_time">Tiempo en llenarse:</string>
</resources>
