<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/welcome_title"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcome_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/welcome_content"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ip_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pref_title_ip_cistern" />

        <EditText
            android:id="@+id/ip_setup"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/pref_default_ip_cistern"
            android:maxLines="1"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/port_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pref_title_port_cistern" />

        <EditText
            android:id="@+id/port_setup"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/pref_default_port_cistern"
            android:maxLines="1"
            android:selectAllOnFocus="true" />

        <Button
            android:id="@+id/continue_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_button_connect"
            android:text="@string/continue_button"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="italic" />
        <Button
            android:id="@+id/skip_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_button_connect"
            android:text="@string/skip_button"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="italic" />


    </LinearLayout>
</ScrollView>