<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        tools:context="itl.angelo.smartcistern.fragments.ConnectFragment">

        <Button
            android:id="@+id/connect_button"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_button_connect"
            android:text="@string/connect"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/connect_details_layout"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight="0.05"
            android:background="@drawable/round_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:text="@string/connection_details"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/signal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/signal_strength"

                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/distance_calculated"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/channel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/channel_setted"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/signal_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/signal_quality"
                android:textColor="@android:color/white" />


        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/wifi_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_wifi_very_bad"
            app:fabSize="normal"
            app:rippleColor="@color/colorPrimary" />


    </LinearLayout>
</ScrollView>