<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="Medidas del contenedor"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/figure_type_pref_title"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/container_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/radio_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/radio_pref_title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/radio_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="introduzca el radio"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/edge_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/edge_pref_title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edge_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="introduzca el largo del arista"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/width_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/width_pref_title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/width_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="introduzca el ancho"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/length_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/length_pref_title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/length_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="introduzca el largo"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/height_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/static_height_pref_title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/height_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="introduzca la altura"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:selectAllOnFocus="true" />

        <Button
            android:id="@+id/finish_button"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button_connect"
            android:text="@string/finish"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="italic" />


    </LinearLayout>
</ScrollView>